
syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "Common/types.proto";
package user_ms;

option java_multiple_files = true;
option java_package = "user_ms";

service UserMsService {
  rpc getUserDetails(UserByIdRequest) returns (UserResponse);
  rpc getUserHistory(UserByIdRequest) returns (types.AllHistoryResponse);
  rpc createUser(CreateUserRequest) returns (UserResponse);
  rpc checkUserLogin(LoginRequest) returns (UserResponse);
}

message Boolean {
  bool success = 1;
}

message CreateUserRequest {
  string userName = 1;
  string phNo = 2;
  string password = 3;
  int32 age = 4;
  string mail = 5;
}


message LoginRequest {
  string userName = 1;
  string password = 2;
}

message UserByIdRequest{
  int32 userId = 1;
}

message UserResponse{
  int32 userId = 1;
  string userName = 2;
  int32 age = 3;
  string mail = 4;
  google.protobuf.Timestamp joinDate = 5;
  string phNo = 6;
}

